# annaDCA

./: .gitignore  README.md  airbm.sh  develop.ipynb  pyproject.toml  setup.py  train_aiRBM.ipynb  train_annaRBM.ipynb
aiDCA/: classes.py  custom_fn.py  dataset.py  io.py  parser.py  train.py  utils.py
aiDCA/binary/: __init__.py  grad.py  statmech.py  stats.py
aiDCA/categorical/: __init__.py  grad.py  init.py  sampling.py
annadca/: __init__.py  annadca.sh  classes.py  cli.py  dataset.py  functions.py  io.py  parser.py  plot.py  rbm.py  train.py  utils.py
annadca/binary/: __init__.py  grad.py  init.py  sampling.py  statmech.py
annadca/categorical/: __init__.py  grad.py  init.py  sampling.py  statmech.py
annadca/layers/: __init__.py  bernoulli.py  gaussian.py  label.py  layer.py  potts.py  relu.py
annadca/rbm/binary/: __init__.py  classes.py  grad.py  init.py  sampling.py  statmech.py
annadca/rbm/categorical/: __init__.py  classes.py  grad.py  init.py  sampling.py  statmech.py
annadca/rbm_old/binary/: classes.py  grad.py  sampling.py  stats.py
annadca/rbm_old/categorical/: init.py
annadca/scripts/: train.py
annadca/utils/: analysis.py  dataset_utils.py  functions.py  stats.py  tg.py
example_data/: Natural_CM.csv  SAM.csv
scripts/: train.py
tutorials/: Sample_model.ipynb  sam.ipynb  truncated_gaussian.ipynb  use_rbm.ipynb
